chore(build): add nexus-staging-maven-plugin