@@ -1,1 +1,2 @@
 -Dfile.encoding=UTF-8
+--add-opens=java.base/java.util=ALL-UNNAMED
